renamed static fields in generated data classes